welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: illegal start of simple expression
    for(j<-0 to getMondeLargeur))
                                ^